--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,8 +387,8 @@
     "    mu, sigma = 0, 0.1\n",
     "    \n",
     "    # Layer 1: Convolutional. Input = 32x32x3. Output = 28x28x6.\n",
-    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma))\n",
-    "    conv1_b = tf.Variable(tf.zeros(6))\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma), name='weights_l')\n",
+    "    conv1_b = tf.Variable(tf.zeros(6), name='bias_l')\n",
     "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
     "\n",
     "    # Activation.\n",
@@ -398,8 +398,8 @@
     "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
     "    # Layer 2: Convolutional. Output = 10x10x16.\n",
-    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
-    "    conv2_b = tf.Variable(tf.zeros(16))\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma), name='weights_2')\n",
+    "    conv2_b = tf.Variable(tf.zeros(16), name='bias_2')\n",
     "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
     "    \n",
     "    # Activation.\n",
@@ -412,24 +412,24 @@
     "    fc0   = flatten(conv2)\n",
     "    \n",
     "    # Layer 3: Fully Connected. Input = 400. Output = 120.\n",
-    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
-    "    fc1_b = tf.Variable(tf.zeros(120))\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma), name='weights_3')\n",
+    "    fc1_b = tf.Variable(tf.zeros(120), name='bias_3')\n",
     "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
     "    \n",
     "    # Activation.\n",
     "    fc1    = tf.nn.relu(fc1)\n",
     "\n",
     "    # Layer 4: Fully Connected. Input = 120. Output = 84.\n",
-    "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
-    "    fc2_b  = tf.Variable(tf.zeros(84))\n",
+    "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma), name='weights_4')\n",
+    "    fc2_b  = tf.Variable(tf.zeros(84), name='bias_4')\n",
     "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
     "    \n",
     "    # Activation.\n",
     "    fc2    = tf.nn.relu(fc2)\n",
     "\n",
     "    # Layer 5: Fully Connected. Input = 84. Output = 43.\n",
-    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, 43), mean = mu, stddev = sigma))\n",
-    "    fc3_b  = tf.Variable(tf.zeros(43))\n",
+    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, 43), mean = mu, stddev = sigma), name='weights_5')\n",
+    "    fc3_b  = tf.Variable(tf.zeros(43), name='bias_5')\n",
     "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
     "    \n",
     "    return logits"
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -532,34 +532,34 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.673\n",
+      "Validation Accuracy = 0.715\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.785\n",
+      "Validation Accuracy = 0.797\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.831\n",
+      "Validation Accuracy = 0.827\n",
       "\n",
       "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.848\n",
+      "Validation Accuracy = 0.840\n",
       "\n",
       "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.841\n",
+      "Validation Accuracy = 0.863\n",
       "\n",
       "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.838\n",
+      "Validation Accuracy = 0.869\n",
       "\n",
       "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.844\n",
+      "Validation Accuracy = 0.877\n",
       "\n",
       "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.854\n",
+      "Validation Accuracy = 0.862\n",
       "\n",
       "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.854\n",
+      "Validation Accuracy = 0.878\n",
       "\n",
       "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.873\n",
+      "Validation Accuracy = 0.887\n",
       "\n",
       "Model saved\n"
      ]
@@ -786,10 +786,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Visualize your network's feature maps here.\n",
@@ -821,6 +819,45 @@
     "        else:\n",
     "            plt.imshow(activation[0,:,:, featuremap], interpolation=\"nearest\", cmap=\"gray\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualize the layers for the random image generated at the top of the notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'eval'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-7d51fd990903>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Layer 1: Convolutional.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0moutputFeatureMap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrand_img\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'weights_l'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation_min\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivation_max\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0mplt_num\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Layer 2: Convolutional.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-6b2b354a9681>\u001b[0m in \u001b[0;36moutputFeatureMap\u001b[0;34m(image_input, tf_activation, activation_min, activation_max, plt_num)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;31m# Note: x should be the same name as your network's tensorflow data placeholder variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# If you get an error tf_activation is not defined it may be having trouble accessing the variable from inside a function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m     \u001b[0mactivation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_activation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfeed_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mimage_input\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0mfeaturemaps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mactivation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplt_num\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'eval'"
+     ]
+    }
+   ],
+   "source": [
+    "# Layer 1: Convolutional.\n",
+    "outputFeatureMap(rand_img, 'weights_l', activation_min=-1, activation_max=-1 ,plt_num=1)\n",
+    "\n",
+    "# Layer 2: Convolutional."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
