Added more detail to the training output

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,11 @@
     "tf.disable_v2_behavior() \n",
     "\n",
     "EPOCHS = 25\n",
-    "BATCH_SIZE = 64"
+    "BATCH_SIZE = 64\n",
+    "\n",
+    "# capture data from each epoch for later plotting\n",
+    "# store epoch, learning rate, validation accuracy, and loss\n",
+    "training_metadata = np.zeros((EPOCHS, 4))"
    ]
   },
   {
@@ -681,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -764,81 +768,75 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Validation Accuracy = 0.904\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.861\n",
+      "Loss = 0.473\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Validation Accuracy = 0.922\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.936\n",
+      "Loss = 0.087\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Validation Accuracy = 0.922\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.930\n",
+      "Loss = 0.302\n",
       "\n",
       "EPOCH 4 ...\n",
-      "Validation Accuracy = 0.938\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.930\n",
+      "Loss = 0.039\n",
       "\n",
       "EPOCH 5 ...\n",
-      "Validation Accuracy = 0.946\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.913\n",
+      "Loss = 0.118\n",
       "\n",
       "EPOCH 6 ...\n",
-      "Validation Accuracy = 0.950\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.946\n",
+      "Loss = 0.022\n",
       "\n",
       "EPOCH 7 ...\n",
-      "Validation Accuracy = 0.941\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.938\n",
+      "Loss = 0.005\n",
       "\n",
       "EPOCH 8 ...\n",
-      "Validation Accuracy = 0.953\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.942\n",
+      "Loss = 0.156\n",
       "\n",
       "EPOCH 9 ...\n",
-      "Validation Accuracy = 0.948\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.946\n",
+      "Loss = 0.004\n",
       "\n",
       "EPOCH 10 ...\n",
-      "Validation Accuracy = 0.947\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.952\n",
+      "Loss = 0.010\n",
       "\n",
       "EPOCH 11 ...\n",
-      "Validation Accuracy = 0.957\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.929\n",
+      "Loss = 0.243\n",
       "\n",
       "EPOCH 12 ...\n",
-      "Validation Accuracy = 0.950\n",
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.937\n",
+      "Loss = 0.062\n",
       "\n",
       "EPOCH 13 ...\n",
+      "Learning rate = 0.001\n",
       "Validation Accuracy = 0.947\n",
+      "Loss = 0.060\n",
       "\n",
       "EPOCH 14 ...\n",
-      "Validation Accuracy = 0.948\n",
-      "\n",
-      "EPOCH 15 ...\n",
-      "Validation Accuracy = 0.957\n",
-      "\n",
-      "EPOCH 16 ...\n",
-      "Validation Accuracy = 0.961\n",
-      "\n",
-      "EPOCH 17 ...\n",
-      "Validation Accuracy = 0.951\n",
-      "\n",
-      "EPOCH 18 ...\n",
-      "Validation Accuracy = 0.942\n",
-      "\n",
-      "EPOCH 19 ...\n",
-      "Validation Accuracy = 0.947\n",
-      "\n",
-      "EPOCH 20 ...\n",
-      "Validation Accuracy = 0.962\n",
-      "\n",
-      "EPOCH 21 ...\n",
-      "Validation Accuracy = 0.965\n",
-      "\n",
-      "EPOCH 22 ...\n",
-      "Validation Accuracy = 0.958\n",
-      "\n",
-      "EPOCH 23 ...\n",
-      "Validation Accuracy = 0.954\n",
-      "\n",
-      "EPOCH 24 ...\n",
-      "Validation Accuracy = 0.966\n",
-      "\n",
-      "EPOCH 25 ...\n",
-      "Validation Accuracy = 0.961\n",
-      "\n",
-      "Model saved\n"
+      "Learning rate = 0.001\n",
+      "Validation Accuracy = 0.952\n",
+      "Loss = 0.002\n",
+      "\n"
      ]
     }
    ],
@@ -846,6 +844,7 @@
     "with tf.Session() as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    num_examples = len(X_train_p)\n",
+    "    loss = 0\n",
     "    \n",
     "    print(\"Training...\")\n",
     "    print()\n",
@@ -854,13 +853,16 @@
     "        for offset in range(0, num_examples, BATCH_SIZE):\n",
     "            end = offset + BATCH_SIZE\n",
     "            batch_x, batch_y = X_train_p[offset:end], y_train[offset:end]\n",
-    "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "            # calculate loss here as well\n",
+    "            training, loss = sess.run([training_operation, loss_operation], feed_dict={x: batch_x, y: batch_y})\n",
     "            \n",
     "        validation_accuracy = evaluate(X_valid_p, y_valid)\n",
-    "        rate *= decay\n",
     "        print(\"EPOCH {} ...\".format(i+1))\n",
+    "        print(\"Learning rate = {:.3f}\".format(rate))\n",
     "        print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
+    "        print(\"Loss = {:.3f}\".format(loss))\n",
     "        print()\n",
+    "        rate *= decay\n",
     "                \n",
     "    saver.save(sess, './lenet')\n",
     "    print(\"Model saved\")"
@@ -1257,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1352,7 @@
     "    for j in range(len(top_five.indices[i])):\n",
     "        print('             {0} --> {1:.5%}'.format(top_five.indices[i][j], top_five.values[i][j]))\n",
     "    print('=============================================')\n",
-    "    print('')"
+    "    print()"
    ]
   },
   {
